GUI work - bugfix sidebar left: height of sidebar content and scrollbar in IE8

--- a/digi_lifecycle/digi_lifecycle_presentation/src/main/webapp/resources/cssFramework/standard.css
+++ b/digi_lifecycle/digi_lifecycle_presentation/src/main/webapp/resources/cssFramework/standard.css
@@ -146,6 +146,9 @@ option {
 .eg3_overflowAuto {
 	overflow:auto !important;
 }
+.eg3_id_wrapper div.eg3_overflowAuto {
+	overflow:auto;
+}
 .eg3_overflow_z20 {
 	overflow:visible !important;
 	z-index:20;
