--- a/digi_lifecycle/digi_lifecycle_presentation/src/main/webapp/resources/cssFramework/themes/skin_DLC/appearance.css
+++ b/digi_lifecycle/digi_lifecycle_presentation/src/main/webapp/resources/cssFramework/themes/skin_DLC/appearance.css
@@ -2007,7 +2007,7 @@ body .eg3_id_siteTitle {
 }
 
 .eg3_viewPage .eg3_viewPage_imgContainer {
-	min-height:34em;
+	min-height:41.5em;
 }
 
 
